[package]
name = "bracken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fern"

[[bin]]
name = "phyto"

[build-dependencies]
lalrpop = "0.20.0"

[features]
default = []

[dependencies]
cranelift-codegen = { version = "0.102.1" }
cranelift-frontend = { version = "0.102.1" }
cranelift-jit = { version = "0.102.1" }
cranelift-module = { version = "0.102.1" }
anyhow = "1.0.75"
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
salsa = { git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0", package = "salsa-2022" }
cranelift-entity = { version = "0.103.0", features = ["serde", "enable-serde"] }
smallvec = { version = "1.11.2", features = ["union", "const_generics"] }

[dependencies.lalrpop-util]
version = "0.20"
features = ["lexer", "unicode"]
