[package]
name = "bracken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fern"

[[bin]]
name = "phyto"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
cranelift-codegen = { version = "0.102.1" }
cranelift-entity = { version = "0.103.0", features = ["serde", "enable-serde"] }
cranelift-frontend = { version = "0.102.1" }
cranelift-jit = { version = "0.102.1" }
cranelift-module = { version = "0.102.1" }
logos = "0.14.2"
pomelo = "0.1.5"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
